main.tf
terraform {
  backend "s3" {
    bucket = "tarbuckcsv"
    key    = "terraform_office/key"
    region = "ap-south-1"
  }
}

#Creating the VPC
 resource "aws_vpc" "Main" {                
   cidr_block       = var.main_vpc_cidr     # Defining the Main CIDR block
   instance_tenancy = "default"
   tags = {
    Name = "Terraform"
  }
 }
 #Creating Internet Gateway and attaching
 resource "aws_internet_gateway" "IGW" {    
    vpc_id =  aws_vpc.Main.id               # vpc_id will be generated after we create VPC
    tags = {
    Name = "Terraform"
  }
 }
 #Create a Public Subnets
 resource "aws_subnet" "publicsubnets" {  
   count = "${length(var.public_subnets)}"
   vpc_id =  aws_vpc.Main.id
   cidr_block  = "${element(var.public_subnets, count.index)}"    # Define CIDR block for public subnets
   tags = {
    Name = "Terraform"
  }
 }

 #Create a Private Subnets             
 resource "aws_subnet" "privatesubnets" {
   count = "${length(var.private_subnets)}"
   vpc_id =  aws_vpc.Main.id
   cidr_block  = "${element(var.private_subnets, count.index)}"     # Define CIDR block for private subnets
   tags = {
    Name = "Terraform"
  }
 }
 resource "aws_eip" "nateIP" {
   vpc   = true
   tags = {
    Name = "Terraform"
  }
 }
 #Creating the NAT Gateway using subnet_id and allocation_id
 resource "aws_nat_gateway" "NATgw" {
   allocation_id = aws_eip.nateIP.id
   subnet_id = "${element(aws_subnet.publicsubnets.*.id, 0)}"
   tags = {
    Name = "TerraformNAT"
  }
 }

 #Route table for Public Subnet
 resource "aws_route_table" "PublicRT" {   
    vpc_id =  aws_vpc.Main.id
         route {
    cidr_block = "0.0.0.0/0"               # Traffic from Public Subnet reaches Internet via Internet Gateway
    gateway_id = aws_internet_gateway.IGW.id
     }
     tags = {
    Name = "TerraformRTPub"
  }
 }
 #Route table for Private Subnet's
 resource "aws_route_table" "PrivateRT" {  
   vpc_id = aws_vpc.Main.id
   route {
    cidr_block = "0.0.0.0/0"        # Traffic from Private Subnet reaches Internet via NAT Gateway
    nat_gateway_id = aws_nat_gateway.NATgw.id
  }
  tags = {
    Name = "TerraformRTPri"
  }
 }
 
  resource "aws_route_table_association" "PublicRTassociation" {
  count = "${length(aws_subnet.publicsubnets)}"
  subnet_id = "${element(aws_subnet.publicsubnets.*.id, count.index)}"
  route_table_id = aws_route_table.PublicRT.id
}

 resource "aws_route_table_association" "PrivateRTassociation" {
  count = "${length(aws_subnet.privatesubnets)}"
  subnet_id = "${element(aws_subnet.privatesubnets.*.id, count.index)}"
  route_table_id = aws_route_table.PrivateRT.id
}
